RD-2019.2.3 <Administrator@PC-20191028HELJ Update SQL.xml, editor.codeinsight.xml, Lua.xml, colors.scheme.xml

--- a/templates/Lua.xml
+++ b/templates/Lua.xml
@@ -10,6 +10,7 @@
     <variable name="A_FUNC_NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="COMMENT" expression="" defaultValue="" alwaysStopAt="true" />
+    <context />
   </template>
   <template name="iof" value="print(&quot;-------------------- $VAR$ = &quot;, table.tostring($VAR$))$END$" description="print" toReformat="false" toShortenFQNames="true">
     <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
